--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,9 @@
             {% endfor %}
             {% for my_page in site.pages %}
               {% if my_page.title %}
-            <li><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}" title="{{ my_page.title }}">{{ my_page.title }}</a></li>
+                <li>
+                    <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}" title="{{ my_page.title }}">{{ my_page.title }}</a>
+                </li>
               {% endif %}
             {% endfor %}
         </ul>
