首页分页修改

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
 
       <div class="footer-col footer-col-3">
         <!-- <p>{{ site.description }}</p> -->
-        <p class="rss-subscribe">subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a></p>
+        <p class="rss-subscribe"><a href="{{ " /feed.xml " | prepend: site.baseurl }}">订阅RSS</a></p>
       </div>
     </div>
 
