--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,40 +2,9 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <!-- <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul> -->
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          <!-- {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-          
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %} -->
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <!-- <p>{{ site.description }}</p> -->
-        <p class="rss-subscribe"><a href="{{ " /feed.xml " | prepend: site.baseurl }}">订阅RSS</a></p>
-      </div>
-    </div>
-
-  </div>
-
+    <label class="footer-heading"><a href="/" title="{{ site.title }}">{{ site.title }}</a></label>
+    <a href="{{ " /feed.xml " | prepend: site.baseurl }}">订阅RSS</a>
+    <p class="site-copyright">Copyright &copy; 2015-2016 {{site.url}}. All Rights Reserved.</p>
 </footer>
 <!-- <script src="/analysis.js"></script> -->
 <script>
