--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="site-header">
     <nav class="navbar">
         <ul>
-            <li><a href="{{ site.baseurl }}/" title="{{ site.title }}">{{ site.title }}</a></li>
-            {% for category in site.categories %}
-            <li>
-                <a href="/" title="{{ category | first }}">{{ category | first }}</a> ({{ category | last | size }})
+            <li class="site-brand">
+                <a href="{{ site.baseurl }}/" title="{{ site.title }}">
+                {% if page.url == '/' %}<h1>{{ site.title }}</h1>{% endif %}
+                {% if page.url != '/' %}{{ site.title }}{% endif %}
+                </a>
             </li>
-            {% endfor %}
             {% for my_page in site.pages %}
               {% if my_page.title %}
                 <li>
@@ -17,17 +17,3 @@
         </ul>
     </nav>
 </header>
-<aside class="site-sidebar">
-    <div class="avatar">
-      
-    </div>
-    <nav class="navbar">
-        <ul>
-            {% for category in site.categories %}
-            <li>
-                <a href="/">{{ category | first }}</a> ({{ category | last | size }})
-            </li>
-            {% endfor %}
-        </ul>
-    </nav>
-</aside>
