--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,23 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <div class="post-meta">
+      <div>
+      <label>分类：</label>
+      {% for category in page.categories %}
+      <span><a href="/{{category}}/" title="{{category}}">{{category}}</a></span>
+      {% endfor %}
+      </div>
+      <div>
+      {% if page.tags.size > 0 %}
+      <label>标签：</label>
+      {% for tag in page.tags %}
+      <span class="tag"><a href="javascript:void(0)" title="{{tag}}">{{tag}}</a></span>
+      {% endfor %}
+      {% endif %}
+      </div>
+      <div><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%Y年%m月%d日" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</div>
+    </div>
   </header>
 
   <div class="post-content" itemprop="articleBody">
