--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -66,7 +66,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-    margin-left: $spacing-unit;
+    //margin-left: $spacing-unit;
 }
 
 li {
@@ -156,13 +156,14 @@ pre {
 /**
  * Wrapper
  */
-.wrapper {
+//.wrapper {
+.page-content {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    padding-right: $spacing-unit * 2;
+    padding-left: $spacing-unit * 2;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
@@ -171,9 +172,17 @@ pre {
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
+
+    position: relative;
+    margin-top: 100px;
+
+    > .wrapper {
+        width: 75%;
+        float: left;
+        margin-right: $spacing-unit;
+        margin-left: -$spacing-unit;
+    }
 }
-
-
 
 /**
  * Clearfix
@@ -204,4 +213,9 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+.pagination {
+    background-color: white;
+    padding: $spacing-unit / 3 $spacing-unit
 }
