--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,7 @@
 /**
  * Site header
  */
- $site-header-width: 80%;
+ $site-header-width: 100%;
  @mixin box-sizing-border-box {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -17,26 +17,37 @@
 
     width: $site-header-width;
     position: fixed;
+    z-index: 1;
     top: 0;
     right: 0;
     background-color: white;
 
     @include box-sizing-border-box;
 
-    > nav > ul > li {
-        float: left;
-        width: $site-header-width/5;
-        padding: 0 1em;
-        @include box-sizing-border-box;
-        list-style: none;
-        > a {
-            color: $text-color;
-
-            &:hover {
-                text-decoration: none;
+    > nav {
+        text-align: center;
+        > ul {
+            display:inline-block;
+            margin-bottom: 0;
+            > li {
+                float: left;
+                padding: 0 1em;
+                @include box-sizing-border-box;
+                list-style: none;
+                > a {
+                    color: $text-color;
+                    line-height: 56px;
+                    &:hover {
+                        text-decoration: none;
+                    }
+                }
+                + li {
+                    margin-left:20px;
+                }
             }
         }
     }
+
 }
 
 .site-title {
@@ -51,6 +62,16 @@
     &:visited {
         color: $grey-color-dark;
     }
+}
+.site-brand {
+    font-size: 1.5rem;
+    font-weight: bold;
+    h1 {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+    position: absolute;
+    left: $spacing-unit;
 }
 
 .site-nav {
@@ -124,27 +145,118 @@
 /**
  * Site sidebar
  */
+@mixin myhover-keyframes {
+    from {
+        background-color:#f9f9f9;
+    }
+    to {
+        background-color:#e9e9e9;
+    }
+}
+@keyframes myhover {
+    @include myhover-keyframes;
+}
+@-webkit-keyframes myhover {
+    @include myhover-keyframes;
+}
+@-o-keyframes myhover {
+    @include myhover-keyframes;
+}
+@mixin myhover-animation($seconds:1s) {
+    animation-name: myhover $seconds 1;
+    animation-fill-mode: forwards;
+    -webkit-animation: myhover $seconds 1;
+    -webkit-animation-fill-mode: forwards;
+    -o-animation: myhover $seconds 1;
+    -o-animation-fill-mode: forwards;
+}
  .site-sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100 - $site-header-width;
-    background-color: $grey-color-dark;
-    height: 100%;
+    //width: 100 - $site-header-width;
+    float: right;
+    width: 25%;
     color: white;
-    padding-top: 100px;
-    a {
-        color: white;
+    > .sidebar-item {
+        background-color: white;
+        padding: $spacing-unit / 2;
+        margin-bottom: $spacing-unit;
+        color: #666666;
+        > .sidebar-item-title {
+            color: #333333;
+            font-weight: bold;
+            line-height: $base-line-height;
+            padding-bottom: $spacing-unit / 3;
+            margin-bottom:  $spacing-unit / 2;
+            border-bottom: 2px dashed #f0f0f0;
+        }
+    }
+    .sidebar-item-categories {
+        ul > li {
+            background-color: #f9f9f9;
+            margin-bottom: $spacing-unit / 3;
+            padding: 5px 0 5px $spacing-unit / 2;
+            > a {
+                color: #d35400;
+                display: block;
+                &:hover {
+                    text-decoration: none;
+                }
+            }
+            &:hover {
+                @include myhover-animation(0.5s);
+            }
+        } 
     }
  }
+.tag-list {
+    .tag-item {
+        background-color: white;
+        padding: $spacing-unit;
+        margin-bottom: $spacing-unit;
+        h2 {
+            display: inline-block;
+        }
+    }
+}
+ .tag {
+        > a {
+            color: #d35400;
+            display: block;
+            font-size: 0.8rem;
+            &:hover {
+                text-decoration: none;
+            }
+        }
+        &:hover {
+            @include myhover-animation(0.5s);
+        }
+        display: inline-block;
+        background-color: #f9f9f9;
+        margin: 0 $spacing-unit / 3 $spacing-unit / 3 0;
+        padding: 2px $spacing-unit / 6;
+        border-radius: 5px;
+    }
 
 
 /**
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: $spacing-unit 0 0;
+    background-color: white;
+    margin-top: $spacing-unit;
+    text-align: center;
+    .footer-heading {
+        display: inline-block;
+        h2 {
+            display: inline-block;
+        }
+    }
+    .site-copyright {
+        color: #aaaaaa;
+        font-size: 0.8em;
+        padding-bottom: $spacing-unit;
+        margin-bottom: 0;
+    }
 }
 
 .footer-heading {
@@ -212,11 +324,11 @@
 /**
  * Page content
  */
-.page-content {
+/* .page-content {
     padding: $spacing-unit*3 0 $spacing-unit;
     width: $site-header-width;
     float: right;
-}
+} */
 
 .page-heading {
     font-size: 20px;
@@ -243,6 +355,10 @@
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
+    > div {
+        display: inline-block;
+        margin-right: $spacing-unit;
+    }
 }
 
 .post-link {
@@ -260,7 +376,6 @@
 }
 
 .post-title {
-    font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -302,6 +417,27 @@
 }
 .post-more {
     text-align: right;
+}
+.post {
+    background-color: white;
+    padding: $spacing-unit;
+    .post-title {
+        font-size: 1.6rem;
+        text-align: center;
+        margin-top: $spacing-unit;
+    }
+    .post-meta {
+        text-align: center;
+    }
+}
+
+.category-title {
+    background-color: white;
+    padding: $spacing-unit;
+    margin-bottom: $spacing-unit;
+    h1 {
+        display: inline-block;
+    }
 }
 
 /* CSS3 animation */
