--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,9 @@
 <footer class="site-footer">
-
   <div class="wrapper">
 
     <label class="footer-heading"><a href="/" title="{{ site.title }}">{{ site.title }}</a></label>
     <a href="{{ " /feed.xml " | prepend: site.baseurl }}">订阅RSS</a>
     <p class="site-copyright">Copyright &copy; 2015-2016 {{site.url}}. All Rights Reserved.</p>
+  </div>
 </footer>
-<!-- <script src="/analysis.js"></script> -->
-<script>
-// baidu
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?9ba0a85c123b7847ce15b80f4ffd78ee";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-
-// google
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-12200990-15', 'auto');
-ga('send', 'pageview');
-</script>
+<script src="/analysis.js"></script>
