--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="site-footer">
   <div class="wrapper">
-
     <label class="footer-heading"><a href="/" title="{{ site.title }}">{{ site.title }}</a></label>
     <a href="{{ " /feed.xml " | prepend: site.baseurl }}">订阅RSS</a>
-    <p class="site-copyright">Copyright &copy; 2015-2016 {{site.url}}. All Rights Reserved.</p>
+    <p class="site-copyright">Copyright &copy; 2015-2018 {{site.url}}. All Rights Reserved.</p>
   </div>
 </footer>
+<script src="//cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/analysis.js"></script>
