--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="site-sidebar">
+<aside class="col-md-3 site-sidebar">
     <nav class="sidebar-item sidebar-item-categories">
         <div class="sidebar-item-title">文章分类</div>
         <ul>
