--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,29 @@
-<header class="site-header">
-    <nav class="navbar">
-        <ul>
-            <li class="site-brand">
-                <a href="{{ site.baseurl }}/" title="{{ site.title }}">
-                {% if page.url == '/' %}<h1>{{ site.title }}</h1>{% endif %}
-                {% if page.url != '/' %}{{ site.title }}{% endif %}
-                </a>
-            </li>
-            {% for my_page in site.pages %}
-              {% if my_page.title %}
-                <li>
-                    <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}" title="{{ my_page.title }}">{{ my_page.title }}</a>
-                </li>
-              {% endif %}
-            {% endfor %}
+<header>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+          <span class="sr-only"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="{{ site.baseurl }}/" title="{{ site.title }}" class="navbar-brand">
+        {% if page.url == '/' %}<h1>{{ site.title }}</h1>{% endif %}
+        {% if page.url != '/' %}{{ site.title }}{% endif %}
+        </a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          {% for my_page in site.pages %}
+            {% if my_page.title %}
+              <li>
+                  <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}" title="{{ my_page.title }}">{{ my_page.title }}</a>
+              </li>
+            {% endif %}
+          {% endfor %}
         </ul>
-    </nav>
+      </div>
+    </div>
+  </nav>
 </header>
