--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      {% include sidebar.html %}
-      <div class="wrapper">
+    <div class="container">
+      <div class="col-md-9">
         {{ content }}
       </div>
+      {% include sidebar.html %}
     </div>
 
     {% include footer.html %}
