_sass/_layout.scss

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -360,7 +360,9 @@
         margin-right: $spacing-unit;
     }
 }
-
+.post-excerpt {
+    word-wrap: break-word;
+}
 .post-link {
     display: block;
     font-size: 24px;
