Spring Cloud Feign对Hystrix断路器的配置

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,7 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+    <p>转载请注明出处：<a href="{{ page.url }}" title="{{page.title}}">{{site.url}}{{ page.url }}</a></p>
   </div>
 
 </article>
