--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,3 +8,10 @@
 <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/analysis.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5832869169280074",
+    enable_page_level_ads: true
+  });
+</script>
