--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -422,7 +422,7 @@
 }
 .post {
     background-color: white;
-    padding: $spacing-unit;
+    /*padding: $spacing-unit;*/
     .post-title {
         font-size: 3rem;
         text-align: center;
