--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <h1 class="post-title">{{ page.title }}</h1>
     <div class="post-meta">
       <div>
       <label>分类：</label>
@@ -20,11 +20,11 @@ layout: default
       {% endfor %}
       {% endif %}
       </div>
-      <div><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%Y年%m月%d日" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</div>
+      <div><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y年%m月%d日" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</div>
     </div>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content">
     {{ content }}
     <p>转载请注明出处：<a href="{{ page.url }}" title="{{page.title}}">{{site.url}}{{ page.url }}</a></p>
   </div>
