--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,15 @@ layout: default
   </header>
 
   <div class="post-content">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 728x90 -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-5832869169280074"
+         data-ad-slot="5596049028"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     {{ content }}
     <p>转载请注明出处：<a href="{{ page.url }}" title="{{page.title}}">{{site.url}}{{ page.url }}</a></p>
   </div>
